[package]
name = "numerus"
version = "0.1.0"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Convert integers to roman numerals and vice versa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
