[package]
name = "numerus"
version = "0.1.1"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Convert integers to roman numerals and vice versa"
repository = "https://github.com/FilippoRanza/numerus"
readme = "README.md"
keywords = ["roman", "numerical", "system", "converion"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
